# swagger/swagger/swagger ex/swagger.yaml
@@ -9,16 +9,16 @@ produces:
   - application/json
 
 paths:
-  /GetChannelStatistics:
+  /UpdateChannelDetails:
     post:
       tags: [Tests]
-      operationId: app.post_testByFile
-      summary: Running pytest's tests by file name
+      operationId: app.post_UpdateChannelDetails
+      summary: Update youtube's channel info
       parameters:
-        - name: TestFile
+        - name: UpdateChannelInfo
           in: body
           schema:
-            $ref: '#/definitions/TestFile'
+            $ref: '#/definitions/UpdateChannelInfo'
       responses:
         200:
           description: Return tests status
@@ -28,7 +28,7 @@ paths:
               pets:
                 type: array
                 items:
-                  $ref: '#/definitions/TestFile'
+                  $ref: '#/definitions/UpdateChannelInfo'
   /RunTestByMarkers:
     post:
       tags: [Tests]
@@ -100,15 +100,27 @@ paths:
                   $ref: '#/definitions/FolderName'
 
 definitions:
-  TestFile:
+  UpdateChannelInfo:
     type: object
     required:
-      - fileName
+      - title
     properties:
-      fileName:
+      title:
         type: string
-        description: File Name
-        example: "/ExampleTests/TestFileExample1.py"
+        description: Channel's title
+        example: "Test Automation Demo"
+        minLength: 1
+        maxLength: 100
+      description:
+        type: string
+        description: Channel's description
+        example: "My first channel"
+        minLength: 1
+        maxLength: 100
+      bannerImage:
+        type: string
+        description: Channel's banner image
+        example: "D:\\demoImage.png"
         minLength: 1
         maxLength: 100
   Marker:
